<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.seafalltest.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howmanydice"
        android:id="@+id/textView" />

    <TextView
        android:text="Results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewResults"
        android:layout_below="@+id/buttonCalculate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextDice"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="4"
        android:editable="false"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:inputType="none" />

    <Button
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/editTextDice"
        android:id="@+id/buttonDiceDec"
        android:width="20dp"
        android:minWidth="44dip" />

    <Button
        android:text="+"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonDiceDec"
        android:layout_toRightOf="@+id/buttonDiceDec"
        android:layout_toEndOf="@+id/buttonDiceDec"
        android:id="@+id/buttonDiceInc"
        android:minWidth="44dip" />

    <Switch
        android:text="@string/rerollweakon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchRerollWeak"
        android:layout_below="@+id/switchDoubleStrong"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonCalculate"
        android:layout_alignEnd="@+id/buttonCalculate" />

    <Button
        android:text="@string/calculatego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCalculate"
        android:layout_below="@+id/switchRerollWeak"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/addlfactors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/buttonDiceDec"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp" />

    <Switch
        android:text="@string/strongon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchDoubleStrong"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/switchRerollWeak"
        android:layout_alignEnd="@+id/switchRerollWeak" />

    <TextView
        android:text="@string/defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5" />

    <Button
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDefenseDec"
        android:minWidth="44dip"
        android:layout_alignTop="@+id/editTextDefense"
        android:layout_toRightOf="@+id/editTextDefense"
        android:layout_toEndOf="@+id/editTextDefense" />

    <Button
        android:text="+"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonDefenseDec"
        android:layout_toRightOf="@+id/buttonDefenseDec"
        android:layout_toEndOf="@+id/buttonDefenseDec"
        android:id="@+id/buttonDefenseInc"
        android:minWidth="44dip" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/editTextDefense"
        android:text="2"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/buttonDiceDec"
        android:layout_toStartOf="@+id/buttonDiceDec" />
</RelativeLayout>
